# urwid

./: .buildinfo  .coveragerc  .coveralls.yml  .editorconfig  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  23dir  CHANGELOG  CNAME  ISSUE_TEMPLATE.md  MANIFEST.in  README  README.rst  SECURITY.md  bigtext.py  black-requirements.txt  browse.py  calc.py  changelog.html  classifiers.txt  dialog.py  docgen_reference.py  docgen_tutorial.py  edit.py  fib.py  genindex.html  graph.py  index.html  input_test.py  isort-requirements.txt  lcd.py  lcd_cf635.py  linebox.py  mypy.ini  objects.inv  palette_test.py  (+24 more)
.devcontainer/: dev.dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  question.md
.github/workflows/: ci.yml  documenation.yml  documentation.yml  isolated_static_check.yml  labels.yml  main.yml  pythonpackage.yml  wheel-check.sh  wheels.yml  yamllint.yml
_sources/: changelog.rst.txt  changelog.txt  index.txt
_sources/manual/: displayattributes.rst.txt  displayattributes.txt  displaymodules.rst.txt  encodings.rst.txt  mainloop.rst.txt  mainloop.txt  overview.rst.txt  textlayout.rst.txt  textlayout.txt  widgets.rst.txt  widgets.txt
_sources/reference/: constants.rst.txt  deprecated.rst.txt  global_settings.txt  main_loop.rst.txt  main_loop.txt  meta.txt  widget.rst.txt  widget.txt
_sources/tutorial/: index.rst.txt  index.txt
_static/: classic.css  default.css  documentation_options.js
docs/: Makefile  changelog.rst  conf.py  displaymodules.txt  eventloops.txt  index.rst  index.txt  intro.txt  standardwidgets.txt  textattributes.txt  textencodings.txt  userinput.txt  widgetlayout.txt
docs/_templates/: layout.html
docs/examples/: bigtext.py  bigtext.py.xdotool  browse.py  browse.py.xdotool  edit.py  edit.py.xdotool  edit_text.txt  graph.py  graph.py.xdotool  index.rst  palette_test.py  palette_test.py.xdotool  pop_up.py  pop_up.py.xdotool  real_browse.py  real_edit.py  subproc.py  subproc.py.xdotool  subproc2.py  tour.py  tour.py.xdotool
docs/manual/: bright_combinations.py  bright_combinations.py.xdotool  canvascache.rst  canvascache.txt  displayattributes.rst  displayattributes.txt  displaymodules.rst  displaymodules.txt  encodings.rst  eventloops.rst  eventloops.txt  index.rst  index.txt  listboxcontents.rst  listboxcontents.txt  mainloop.rst  mainloop.txt  overview.rst  safe_combinations.py  safe_combinations.py.xdotool  standardwidgets.rst  standardwidgets.txt  textattributes.rst  textattributes.txt  textencodings.rst  textencodings.txt  textlayout.rst  textlayout.txt  userinput.rst  userinput.txt  wanat.py  wanat_multi.py  wcur1.py  wcur2.py  widgetlayout.rst  widgetlayout.txt  widgetmethods.rst  widgetmethods.txt  widgets.rst  wmod.py  (+1 more)
docs/reference/: attrspec.rst  basic.rst  canvas.rst  command_map.rst  constants.rst  containers.rst  decorations.rst  deprecated.rst  display_modules.rst  exceptions.rst  index.rst  list_walkers.rst  listbox.rst  main_loop.rst  signals.rst  text_layout.rst  widget.rst
docs/tools/: compile_pngs.sh  screenshot-race-stresser.sh  screenshots.sh
docs/tutorial/: adventure.py  adventure.py.xdotool  attr.py  cmenu.py  edit.py  edit.py.xdotool  frlb.py  frlb.py.xdotool  highcolors.py  highcolors.py.xdotool  hmenu.py  index.rst  index.txt  input.py  input.py.xdotool  lbcont.py  lbcont.py.xdotool  lbscr.py  lbscr.py.xdotool  menu.py  menu1.py  menu1.py.xdotool  menu2.py  menu2.py.xdotool  menu3.py  menu3.py.xdotool  menu4.py  menu4.py.xdotool  minimal.py  minimal.py.xdotool  multiple.py  qa.py  sig.py  sig.py.xdotool  smenu.py  urwid_attr.py  urwid_attr.py.xdotool  wanat.py  wanat_multi.py  wanat_new.py  (+4 more)
examples/: asyncio_socket_server.py  bigtext.py  browse.py  calc.py  dialog.py  edit.py  fib.py  graph.py  index.html  input_test.py  lcd_cf635.py  palette_test.py  pop_up.py  readline_edit.py  subproc.py  subproc2.py  terminal.py  tour.py  treesample.py  twisted_serve_ssh.py  urwid
manual/: canvascache.html  displayattributes.html  displaymodules.html  encodings.html  index.html  mainloop.html  overview.html  textlayout.html  userinput.html  widgets.html
reference/: attrspec.html  canvas.html  command_map.html  constants.html  deprecated.html  display_modules.html  exceptions.html  global_settings.html  index.html  list_walkers.html  main_loop.html  meta.html  signals.html  text_layout.html  widget.html
source/: Makefile  str_util.c
tests/: test_canvas.py  test_columns.py  test_container.py  test_decoration.py  test_doctests.py  test_escapes.py  test_event_loops.py  test_filler.py  test_floatedit.py  test_font.py  test_frame.py  test_grapheme_clusters.py  test_graphics.py  test_grid_flow.py  test_line_box.py  test_listbox.py  test_main_loop.py  test_moved_imports.py  test_overlay.py  test_padding.py  test_pile.py  test_raw_display.py  test_scrollable.py  test_signals.py  test_str_util.py  test_text_layout.py  test_tree.py  test_util.py  test_vterm.py  test_widget.py
tutorial/: index.html
urwid/: __init__.py  _async_kw_event_loop.py  _async_kw_main_loop.py  _posix_raw_display.py  _raw_display_base.py  _win32.py  _win32_raw_display.py  canvas.py  command_map.py  compat.py  constants.py  container.py  curses_display.py  decoration.py  display_common.py  escape.py  font.py  graphics.py  html_fragment.py  lcd_display.py  listbox.py  main_loop.py  monitored_list.py  numedit.py  old_str_util.py  raw_display.py  signals.py  split_repr.py  str_util.py  str_util.pyi  tests.py  text_layout.py  treetools.py  utable.py  util.py  version.py  vterm.py  vterm_test.py  web_display.py  widget.py  (+1 more)
urwid.egg-info/: PKG-INFO  SOURCES.txt
urwid/display/: __init__.py  _posix_raw_display.py  _raw_display_base.py  _web.css  _web.js  _win32.py  _win32_raw_display.py  common.py  curses.py  escape.py  html_fragment.py  lcd.py  raw.py  web.py
urwid/event_loop/: __init__.py  abstract_loop.py  asyncio_loop.py  glib_loop.py  main_loop.py  select_loop.py  tornado_loop.py  trio_loop.py  (+2 more)
(+54 files in other folders)
