[build-system]
build-backend = "setuptools.build_meta"
# Minimum requirements for the build system to execute.
# PEP 508 specifications for PEP 518.
requires = [
  "setuptools>=80.8.0",
  "setuptools-scm[toml]>=8.1.0",
]

[project]
name = "urwid"
description = "A full-featured console (xterm et al.) user interface library"
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [ "console", "curses", "listbox", "ncurses", "scroll", "text layout", "ui", "user interface", "widget" ]
license = "LGPL-2.1-only"  # Use SPDX classifier
license-files = [ "COPYING" ]
requires-python = ">=3.9.0"
dynamic = [ "classifiers", "dependencies", "version" ]
[[project.authors]]
name = "Ian Ward"
email = "ian@excess.org"
[project.optional-dependencies]
curses = [ "windows-curses; sys_platform=='win32'" ]
glib = [ "pygobject" ]
tornado = [ "tornado>=5.0" ]
trio = [ "exceptiongroup; python_version<'3.11'", "trio>=0.24.0" ]
twisted = [ "twisted" ]
zmq = [ "zmq" ]
# for lcd_display
serial = [ "pyserial" ]
lcd = [ "pyserial" ]
[project.urls]
Homepage = "https://urwid.org/"
Documentation = "https://urwid.org/manual/index.html"
Repository = "https://github.com/urwid/urwid"
"Bug Tracker" = "https://github.com/urwid/urwid/issues"

[dependency-groups]
dev = [
  { include-group = "build" },
  { include-group = "documentation" },
  { include-group = "lint" },
  { include-group = "mypy" },
  { include-group = "pre-commit" },
  { include-group = "pylint" },
]
build = [
  "build",
]
documentation = [
  "sphinx",
]
lint = [
  "pyproject-fmt",
  "ruff",
  "yamllint",
]
mypy = [
  "mypy[faster-cache,reports]",
]
pre-commit = [
  "prek",
]
pylint = [
  "pylint",
]

[tool.setuptools]
platforms = [ "unix-like" ]
zip-safe = false
[tool.setuptools.dynamic]
classifiers = { file = [ "classifiers.txt" ] }
dependencies = { file = [ "requirements.txt" ] }
[tool.setuptools.package-data]
urwid = [ "py.typed" ]
[tool.setuptools.packages.find]
include = [
  "urwid",
  "urwid.*",
]
namespaces = false

[tool.distutils.bdist_wheel]
universal = 0

[tool.setuptools_scm]
write_to = "urwid/version.py"

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
# Disable musllinux as not popular platform
skip = [ "pp*", "*-musllinux_*" ]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = [ "tests" ]
output-format = "full"
[tool.ruff.format]
docstring-code-format = true
[tool.ruff.lint]
extend-select = [
  "E",
  "W",     # also pycodestyle warnings
  "F",     # pyflakes
  "PYI",   # flake8-pyi
  "ASYNC", # flake8-async
  "FA",    # from __future__ import annotations
  "SLOT",  # flake8-slots
  "TC",    # flake8-type-checking
  "S",     # flake8-bandit
  "A",     # flake8-builtins
  "B",
  "T10",
  "EXE",   # flake8-bugbear, flake8-debugger, flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "RET",
  "SIM",
  "C4",    # flake8-return, flake8-simplify, flake8-comprehensions
  "ICN",
  "PGH",   # flake8-import-conventions, pygrep-hooks
  "Q",     # quotes
  "FLY",   # Flynt
  "FURB",  # Refurb
  "PIE",   # flake8-pie,
  "TRY",
  "UP",
  "I",
  "PL",
  "PERF",
  "RUF",   # tryceratops, pyupgrade, isort, pylint + perflint, Ruff-specific
]
extend-ignore = [
  "E221",
  "E222",    # handled by formatter
  "PLR6301",
  "E203",
  # refactor rules (too many statements/arguments/branches)
  "PLR0904",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0917",
  "PLR2004",
  "PLC0415", # We have a lot of imports outside top-level
  "RET504",  # Unnecessary variable assignment before a return statement
  "SIM108",  # Use ternary operator,
  "TRY003",  # long messages prepare outside, ...
  "PYI063",  # MonitoredList is a list subclass, this expected to change
]
[tool.ruff.lint.isort]
known-third-party = []
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401", "SIM105" ]
"urwid/display/curses.py" = [ "A005" ]
[tool.ruff.lint.pydocstyle]
convention = "pep257"
[tool.ruff.lint.pylint]
allow-dunder-method-names = [
  "__rich_repr__",
  # class generation
  "_contents__getitem__",
  "_contents__setitem__",
  "_contents__delitem__",
]

[tool.pylint]
reports = false
disable = [
  "arguments-differ",
  "attribute-defined-outside-init",                   # old bad practice, fixed step-by-step
  "broad-except",
  "broad-exception-raised",
  "consider-using-assignment-expr",
  # iterable modification during iteration
  "consider-using-enumerate",
  "cyclic-import",
  "file-ignored",
  "fixme",
  "import-outside-toplevel",
  "invalid-name",
  # Magic part
  "invalid-overridden-method",
  "locally-disabled",
  "logging-format-interpolation",
  "logging-fstring-interpolation",
  "missing-docstring",
  "redefined-variable-type",                          # makes not happy typechecking, but super common
  "similarities",
  "superfluous-parens",
  "suppressed-message",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-positional-arguments",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "unused-argument",
  "unused-private-member",
  # too complex union
  "use-implicit-booleaness-not-comparison-to-string",
  "use-implicit-booleaness-not-comparison-to-zero",
]
enable = "all"
extension-pkg-whitelist = []
ignore = [ "CVS", "version.py" ]
jobs = 0
load-plugins = [
  "pylint.extensions.check_elif",
  "pylint.extensions.code_style",
  "pylint.extensions.dict_init_mutate",
  "pylint.extensions.dunder",
  "pylint.extensions.for_any_all",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.redefined_variable_type",
  "pylint.extensions.typing",
]
max-line-length = 120
py-version = "3.9"
[tool.pylint.basic]
good-names = [
  "i",
  "j",
  "k",
  "ex",
  "Run",
  "_",
  "bar", # we draw bars
]
[tool.pylint.classes]
exclude-protected = [
  "_asdict",
  "_fields",
  "_replace",
  "_source",
  "_make",
  "os._exit",
  # API
  "_original_widget",
  "_invalidate",
  "_repr_attrs",
  "_repr_words",
  "_w",
]
[tool.pylint.dunder]
good-dunder-names = [
  "__rich_repr__",
  # class generation
  "_contents__getitem__",
  "_contents__setitem__",
  "_contents__delitem__",
]
[tool.pylint.format]
ignore-long-lines = "^(\\s*(# )?<?https?://\\S+>?)|(.+# type: ignore\\[[\\w\\-\\,]+\\])$"

[tool.pyproject-fmt]
# After how many columns split arrays/dicts into multiple lines and wrap long strings;
# use a trailing comma in arrays to force multiline format instead of lowering this value
column_width = 120
# Keep full version numbers (e.g., 1.0.0 instead of 1.0) in dependency specifiers
keep_full_version = true
generate_python_version_classifiers = false
# Table format: "short" collapses sub-tables to dotted keys, "long" expands to [table.subtable] headers
table_format = "long"

[tool.mypy]
disallow_untyped_defs = true
show_error_context = true
show_column_numbers = true
pretty = true
show_error_codes = true
[[tool.mypy.overrides]]
module = "urwid.display.curses"
disable_error_code = [
  "union-attr", # chacking for started state before each operation if too expensive
]
[[tool.mypy.overrides]]
module = [ "gi.*", "serial.*", "trio.*" ]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vvvv --doctest-modules -s --cov=urwid"
doctest_optionflags = [ "ELLIPSIS", "IGNORE_EXCEPTION_DETAIL" ]
testpaths = [ "urwid" ]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "def __rich_repr__",
  # own repr construct magic
  "def _repr_words",
  "def _repr_attrs",

  # Don't complain if tests don't hit defensive assertion code:
  "raise NotImplementedError",

  # Exclude methods marked as abstract
  "@abstractmethod",
  "@abc.abstractmethod",

  # Exclude import statements
  "^from\\b",
  "^import\\b",

  # Exclude variable declarations that are executed when file is loaded
  "^[a-zA-Z_]+\\b\\s=",

  # Code for static analysis is never covered:
  "if typing.TYPE_CHECKING:",
  "@typing.overload",
  "@overload",

  # Protocols
  "@runtime_checkable",
  "@typing.runtime_checkable",
  "class \\w*\\(Protocol\\):",
  "class \\w*\\(typing.Protocol\\):",

  # Fallback code with no installed deps is almost impossible to cover properly
  "except ImportError:",

  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",

  # OS Specific
  "if platform.system()",
  "if IS_WINDOWS",
  "if os.name",
  "if sys.platform",

  # Manual test code
  "class \\w*test:",
  "def \\wtest():"
]
[tool.coverage.run]
omit = [ "tests/*", ".tox/*", "setup.py" ]
branch = true

[tool.refurb]
python_version = "3.9"
ignore = [ "FURB104", "FURB144", "FURB146" ]
[[tool.refurb.amend]]
path = "urwid/__init__.py"
ignore = [ "FURB107" ]
[[tool.refurb.amend]]
path = "urwid/display/__init__.py"
ignore = [ "FURB107" ]
[[tool.refurb.amend]]
path = "urwid/event_loop/__init__.py"
ignore = [ "FURB107" ]
